changes for password change and users full name display order setting features
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7041 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/css/SystemInfo.css
+++ b/src/admin/css/SystemInfo.css
@@ -25,7 +25,7 @@
 {
 	text-align:left;
 	font-size: .8em;
-	width: 7.5em;
+	width: 10.5em;
 }
 
 .detailinfo td
@@ -55,6 +55,11 @@
 .detailinfo td #SSLValue
 {
 	margin-left: -1px;
+}
+
+.detailinfo td #FullNameSetting
+{
+	padding-left: 4px;
 }
 
 .adminlistnav
