--- a/src/webaccess/css/ifolder.css
+++ b/src/webaccess/css/ifolder.css
@@ -764,3 +764,48 @@ span.rights
 {
 	color: #4D6D8B;
 }
+
+.when
+{
+        float: left;
+        margin-top: 12px;
+        margin-bottom: 8px;
+        margin-left: 12px;
+        padding-right: 12px;
+        padding-left: 4px;
+        padding-bottom: 6px;
+        border: solid 1px #D4D0C8;
+        #text-align: left;
+        height: 7em;
+        width: 28em;
+        font-size: 1em;
+}
+.settingsbuttons
+{
+        float: left;
+        clear: left;
+        padding-left: 4px;
+        padding-bottom: 8px;
+}
+.pwdlabels
+{
+	#margin: 4px 4px 4px 4px; 
+}
+.curpwdtextbox
+{
+	float: right;
+	margin-right: 10px;
+	margin-top: -16px;
+}
+.newpwdtextbox
+{
+	float: right;
+	margin-right: 10px;
+	margin-top: -18px;
+}
+.verifynewpwdtextbox
+{
+	float: right;
+	margin-right: 10px;
+	margin-top: -19px;
+}
