bug 515888 : fix is done so that on systems page, it will display the group list in the same row as secondary admin, so that it will show which secondary admin is managing which groups
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7166 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/css/SystemInfo.css
+++ b/src/admin/css/SystemInfo.css
@@ -111,6 +111,12 @@
 {
 }
 
+.adminlistheader .grouplistcolumn
+{
+	padding-right: 6px;
+	width: 12em;
+}
+
 .adminlistitem
 {
 	height: 1.5em;
@@ -129,18 +135,31 @@
 
 .adminitem2
 {
-	width: 3em;
+	width: 2.5em;
 	padding-left: .5em;
 }
 
 .adminitem3
 {
 	padding-right: 6px;
-	width: 10.5em;
+	width: 10em;
 }
 
 .adminitem4
 {
+	padding-right: 6px;
+	width: 12.5em;
+}
+
+.adminitem5
+{
+	padding-right: 6px;
+        width: 6em;
+}
+
+.adminitem6
+{
+        margin-right: 12px;
 }
 
 .deleteadminbutton
